project('ValaGist', ['vala', 'c'],
        version: '1.0',
        meson_version: '>=0.31')

glib = dependency('glib-2.0', version: '>=2.32')
gobject = dependency('gobject-2.0', version: '>=2.32')
json_glib = dependency('json-glib-1.0', version: '>=1.0')
libsoup = dependency('libsoup-2.4', version: '>=2.4')

subdir('src')
#subdir('tests')
